--- a/compiled/developers.html
+++ b/compiled/developers.html
@@ -11,14 +11,14 @@
 </form>
 </div>
 
-<!--End mc_embed_signup--></div></div></div><div class="Sidebar"><link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<!--End mc_embed_signup--></div></div></div><div class="Sidebar"><div class="SidebarEmailForm"><link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style>
 #mc_embed_signup {
     padding-top: 16px;
 }
 
 #mc_embed_signup form {
-  padding: 0 8px;
+  padding: 0;
 }
 
 #mc_embed_signup input.email {
@@ -36,8 +36,10 @@
     </div>
   </form>
 </div>
-
-      <!--End mc_embed_signup--></div></div><div class="Footer"><div class="Footer__text">We <3 You!</div><div class="Footer__social"><a href="http://facebook.com/hacksforsnacks" class="Footer__social-facebook"><img src="/public/images/facebook.svg"/></a></div></div></div><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!--End mc_embed_signup--></div><h4>Next Event</h4><h5>Date & Time</h5><p>March 28, 2015<br>
+10:00 AM - 2:00 PM</p><h5>Location</h5><p>Startup Ogden<br>
+2314 Washington Blvd., Ogden, Utah<br>
+<a href="http://www.weber.edu/downtown">http://www.weber.edu/downtown</a></p></div></div><div class="Footer"><div class="Footer__text">We <3 You!</div><div class="Footer__social"><a href="http://facebook.com/hacksforsnacks" class="Footer__social-facebook"><img src="/public/images/facebook.svg"/></a></div></div></div><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
